feat: html complete

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,7 +1,1 @@
-<ng-template [ngIf]="characterList">
-    <div *ngFor="let character of characterList.results">
-        <img src={{character.image}} alt="ade">
-        <h2>{{character.name}}</h2>
-        <p>{{character.species}}</p>
-    </div>
-</ng-template>
+<p>Documentation works</p>
