--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
-<nav>
+<nav class="navbar" >
     <a routerLink="/">Home</a>
     <a routerLink="/about-us">About Us</a>
     <a routerLink="/documentation">Documentacion</a>
+    <a routerLink="/add-documentation">Crear</a>
 </nav>
