FEAT: Insert/Create working, but we need to refactor some structure before continue with the formulary

--- a/src/app/pages/add-documentation/add-documentation.component.html
+++ b/src/app/pages/add-documentation/add-documentation.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container"> -->
   <form [formGroup]="addForm" (ngSubmit)="addFormulary()">
     <p>Imagen</p><input type="text" formControlName="img"/>
     <p>Título</p><input type="text" formControlName="title"/>
@@ -7,4 +7,4 @@
     <p>url</p><input type="text" formControlName="url"/>
     <button>Crear</button>
   </form>
-</div>
+<!-- </div> -->
