feat: home and about-us

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,18 @@
-<p>About Us works</p>
+<h2>Tamara</h2>
+<p>Mi camino profesional siempre ha estado marcado por las tecnologías aunque he trabajado de todo nunca he dejado mi gran pasión, 
+    "Expresar, comunicar a través de la experiencia visual", mediante la fotografia y el diseño gráfico. Estos no han sido suficientes para sentirme 
+    completa pues soy amante de los retos y la superación, por ello me embarqué en le reto de estudiar Full Stack Debeloper de la mano de Upgrade Hub
+    gracias a ello ahora soy una profesional más versátil capaz de desenvolverme en un desarrollo web tanto en la parte del cliente (Front End) como 
+    del servidor (Back End). Consiguiendo ser perfil muy completo, con amplios conocimientos y herramientas que me permiten afrontar cualquier fase de un proyecto.
+    Siendo Junior y con un camino por delante de aprendizaje y puesta en escena de conocimientos ¡Voy a por todas! y esta Web es el productos del trabajo en 
+    equipo con mis compañeros para tener en un lugar todo lo necesario para poder aplicar nuestros conocimientos y seguir avanzando al ritmo en el que avanzan las
+    tecnologías.</p>
+
+<h2>Oriol</h2>
+<p>...Descripcion...</p>
+
+<h2>Alejandro</h2>
+<p>...Descripcion...</p>
+
+<h2>Marta</h2>
+<p>...Descripcion... </p>
