--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,15 @@
-<nav class="navbar" >
+<nav class="navbar">
+<img routerLink="/"  class="navbar-logo" src="assets/logo/LOGO.png"/>
+  <div class="navbar-link">
     <a routerLink="/">Home</a>
     <a routerLink="/about-us">About Us</a>
     <a routerLink="/documentation">Documentacion</a>
     <a routerLink="/add-documentation">Crear</a>
+  </div>
 </nav>
+
+<!-- <div class="navbarFav"  >
+  <a href="#"><img src=""/></a>
+  <a href="#"><img src=""/></a>
+  <a href="#"><img src=""/></a>
+</div> -->
