--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,8 +1,53 @@
+* {
+  text-decoration: none;
+  color: inherit;
+}
+
 .navbar{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    min-height: 80px;
-    color: black;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+
+    &-link {
+    display: flex;
+    height: 80px;
+    color: whitesmoke;
+    gap: 20px;
+    margin-right: 26px;
+    }
+
+    a {
+      height: 80px;
+      line-height: 80px;
+      transition: all 0.5s;
+
+      &:hover {
+        font-size: 105%;
+        transition: all 0.5s;
+        box-shadow: inset 0px -8px 0px 0px #95C11E
+      }
+    }
+
+
+
+
+
+    &-logo{
+      width: 170px;
+      margin-left: 20px;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    }
+
+
+
+
+
 }
