--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
-
 * {
-    font-family: 'Victor Mono', monospace
+    font-family: 'Victor Mono', monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none
 }
 
