--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="footer-link">
+      <img routerLink="/"  class="footer-logo" src=""/>
+    </div>
+</div>
