--- a/src/app/pages/add-documentation/add-documentation.component.scss
+++ b/src/app/pages/add-documentation/add-documentation.component.scss
@@ -1,4 +1,6 @@
+
 .container {
+    margin: 0;
     width: 100%;
     height: 90vh;
     background-color: rgb(90, 90, 90);
@@ -34,6 +36,7 @@ input {
     outline: none;
     border: none;
     border-bottom: 2px solid #95C11E;
+    margin-top: 10px;
     text-align: center;
 }
 
