--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
     align-items: center;
     border-bottom: 3px solid #95C11E;
     background-color: black;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
 
     &-link {
     display: flex;
@@ -38,10 +38,13 @@
     &-logo{
       width: 170px;
       margin-left: 20px;
+      transition: all 0.5s;
 
-    &:hover {
-      cursor: pointer;
-    }
+      &:hover {
+        cursor: pointer;
+        transition: all 0.5s;
+        scale: 1.1;
+      }
 
     }
 
