--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,40 @@
-<h1>No se que poner! :)</h1>
 
-<p>Somos un grupo compuesto por cuatro alumnos de UpgradeHub, y lo que tenemos en comun, la ilusion y las ganas de seguir aprendiendo, creciendo y seguir activos
-    en este avance digital y con esta web pretendemos facilitarte el proceso de seleccion de tus recursos y herramientas para convertirte en un ninja del codigo
-    y a la vez crear una comunidad en la que compartir los allazgos encontrados en nusetro "mundo" web en la que puedes encontrar 
-    toda la información que necesites para poder hacer lo mismo que nosotros. Aquí encontrarás todo tipo de documentación tutoriales, videos, etc. 
-    Con lo que vas a poder apoyarte al realizar tus creaciones con HTML, CSS, JavaScritp...</p>
+<div class="homeBlock">
+    <div class="homeContainer">
+        <div class="homeContainer-title">
+            <h1>HTML, CSS Y MÁS</h1>
+        </div>
+        <div class="homeContainer-introduction">
+            <p>Somos un grupo compuesto por cuatro alumnos de UpgradeHub, y lo que tenemos en común esseguir aprendiendo, creciendo y seguir activos
+                en este avance digital; y con esta web pretendemos facilitarte el proceso de selección de tus recursos y herramientas para convertirte en un ninja del código
+               </p>
+                <img src="../../../assets/images/java.png" alt="">
+        </div>
 
-    <p>Apasionados por el desarrollo web, nace este blog para difundir la seleccion de recursos y herramientas "seleccionados" por nosotros mismos para vosotros y 
-        com la posibilidad de seguir compartiendo y actualizando los recursos periodicamente. Pero siempre eres tu quien puede seleccionar aquel material que más 
-        te interesa y compartirlo.
-        Aquí podras estar al día de .... 
-    </p>
+        <div class="homeContainer-paragraph2">
+            <p> Crearemos una comunidad en la que compartir los hallazgos encontrados en nuestro "mundo" web en la que puedes encontrar 
+                toda la información que necesitas para poder hacer lo mismo que nosotros. Aquí encontrarás todo tipo de documentación tutoriales, videos, etc. 
+                Con lo que vas a poder apoyarte al realizar tus creaciones con HTML, CSS, JavaScritp...</p>
+                <img src="../../../assets/images/html.png" alt="">
+
+        </div>
+        <div class="homeContainer-paragraph">
+            <p>Apasionados por el desarrollo web, nace este blog para difundir la selección de recursos y herramientas "seleccionados" por nosotros mismos para vosotros y 
+                con la posibilidad de seguir compartiendo y actualizando los recursos periodicamente. Pero siempre eres tu quien puede seleccionar aquel material que más 
+                te interesa y compartirlo.
+            </p>
+            <img src="../../../assets/images/css.png" alt="">
+        </div>
+        
+    </div>
+</div>
+
+
+
+
+
+
+   
 
 
 
