--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,95 +1,82 @@
 <div class="aboutBlock">
-    <div class="aboutContainer">
-        <div class="aboutContainer-card">
-            <div class="aboutContainer-card_image">
-                <img src="https://media.licdn.com/dms/image/C4D03AQEk9Os_vQm5xQ/profile-displayphoto-shrink_200_200/0/1577021888394?e=1681948800&v=beta&t=48SHBsDtdtdTBxn9eH77JpuDbmY90v-Ia-ScOgRkK0s"
-                     alt="">
-                    <div class="aboutContainer-card_image__icons">
-                        <a href="https://github.com/TamaraGlez"><img src="../../../assets/images/github.png" alt=""
-                                ></a>
-                        <a href="https://www.linkedin.com/in/tamaragonzálezruiz/"><img
-                                src="../../../assets/images/linkedin.png" alt="" ></a>
-                    </div>
-            </div>
+  <div class="aboutContainer">
 
-            <div class="aboutContainer-card_description">
-                <h2>Tamara</h2>
-                <p>"Expresar, comunicar a través de la experiencia visual" no han sido suficientes para sentirme
-                    completa pues soy amante de los retos y la superación, por ello mi nuevo reto superadoFull Stack
-                    Debeloper de la mano de Upgrade Hub ahora soy una profesional más versátil capaz de desenvolverme en
-                    un desarrollo web tanto en la parte del cliente (Front End) como del servidor (Back End).
-                    Consiguiendo ser perfil muy completo y afrontar cualquier fase de un proyecto.</p>
-               
-
-            </div>
+    <div class="aboutContainer-card">
+      <div class="aboutContainer-card_image">
+        <img src="https://media.licdn.com/dms/image/C4D03AQEk9Os_vQm5xQ/profile-displayphoto-shrink_200_200/0/1577021888394?e=1681948800&v=beta&t=48SHBsDtdtdTBxn9eH77JpuDbmY90v-Ia-ScOgRkK0s" alt=""/>
+      </div>
+      <div class="aboutContainer-card_description">
+        <div class="aboutContainer-card_image__icons">
+          <h2 class="texI"  >Tamara</h2>
+          <a href="https://github.com/TamaraGlez"><img src="../../../assets/images/github.png" alt=""/></a>
+          <a href="https://www.linkedin.com/in/tamaragonzálezruiz/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
         </div>
-        <div class="aboutContainer-card">
-
-            <div class="aboutContainer-card_description">
-                <h2>Oriol</h2>
-                <p>Aficionado a la tecnología y estando al día de las últimas tendencias, ahora me he formado como
-                    programador Full Stack. De este modo quiero resolver mis inquietudes, crecer como profesional y
-                    ayudar a crear/mejorar aplicaciones con mi visión, ayudando a los compañeros que tenga a mi lado en
-                    todo momento.</p>
-                
-            </div>
-            <div class="aboutContainer-card_image">
-                
-                <img src="https://media.licdn.com/dms/image/D4E03AQF2R1xb6gCamA/profile-displayphoto-shrink_200_200/0/1673939612668?e=1681948800&v=beta&t=J4m5-X7M0cusH8HzlVOnonA6PJJ8_tWdhYriEf8Wamw"
-                     alt="">
-                     <div class="aboutContainer-card_image__icons">
-                        <a href="https://github.com/omolinsc"><img src="../../../assets/images/github.png" alt=""
-                                ></a>
-                        <a href="https://www.linkedin.com/in/oriolmolinscasanovas/"><img
-                                src="../../../assets/images/linkedin.png" alt="" ></a>
-                    </div>
-            </div>
-        </div>
-        <div class="aboutContainer-card">
-            <div class="aboutContainer-card_image">
-                <img src="https://media.licdn.com/dms/image/D4D35AQHpyoooeRVz0Q/profile-framedphoto-shrink_200_200/0/1676055319562?e=1676822400&v=beta&t=OP5xwpMUQ8yLgHKnT_7s0A2Mwwg9PDoqAMlkmVpYsd8"
-                     alt="">
-                     <div class="aboutContainer-card_image__icons">
-                        <a href="https://github.com/alejandrolamela"><img src="../../../assets/images/github.png" alt=""
-                                ></a>
-                        <a href="https://www.linkedin.com/in/alejandro-lamela-full-stack/"><img
-                                src="../../../assets/images/linkedin.png" alt="" ></a>
-                    </div>
-                     
-            </div>
-            <div class="aboutContainer-card_description">
-                <h2>Alejandro</h2>
-                <p>Mi relación con las tech viene de cuando trabajé como robótico y automatista
-                    , un camino duro y largo, pero que conseguí superar y tambien enamorarme de esta profesión
-                    para volcarme ahora en otro proyecto igual de duro pero a la par de emocionante como es
-                    ser developer web.
-                </p>
-               
-            </div>
-        </div>
-
-        <div class="aboutContainer-card">
-
-            <div class="aboutContainer-card_description">
-
-                <h2>Marta</h2>
-                <p>Desde que tengo uso de razon, siempre he tenido curiosidad, ganas de aprender nuevas tecnologías y
-                    adquirir nuevas
-                    habilidades, por ello quise continuar con esta unión y empezar un bootcamp de Full Stack Developer.
-                    Poner esto si queréis y luego lo cambio</p>
-                
-            </div>
-            <div class="aboutContainer-card_image">
-                <img src="https://media.licdn.com/dms/image/D4E35AQGsoo8evhKIFw/profile-framedphoto-shrink_200_200/0/1668524742739?e=1676822400&v=beta&t=XcJeapSJFLglNJHCYShzKph1fuxUoWTwGcAqakDV8QY"
-                     alt="">
-                     <div class="aboutContainer-card_image__icons">
-                        <a href="https://github.com/martabelfon"><img src="../../../assets/images/github.png" alt=""
-                                ></a>
-                        <a href="https://www.linkedin.com/in/martabeltranfonseca/"><img
-                                src="../../../assets/images/linkedin.png" alt="" ></a>
-                    </div>
-            </div>
-        </div>
-
+        <p>
+          Nuevo reto superado Full Stack Debeloper de la
+          mano de Upgrade Hub me completa como una profesional más versátil capaz de
+          desenvolverme en desarrollo web tanto en la parte del cliente
+          (Front End) como del servidor (Back End). Consiguiendo poder afrontar cualquier fase de un proyecto.
+        </p>
+      </div>
     </div>
+
+    <div class="aboutContainer-card">
+      <div class="aboutContainer-card_description">
+        <div class="aboutContainer-card_image__icons">
+          <h2 class="textD" >Oriol</h2>
+          <a href="https://github.com/omolinsc"><img src="../../../assets/images/github.png" alt=""/></a>
+          <a href="https://www.linkedin.com/in/oriolmolinscasanovas/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
+        </div>
+        <p class="textD" >
+          Aficionado a la tecnología y estando al día de las últimas tendencias,
+          ahora me he formado como programador Full Stack. De este modo quiero
+          resolver mis inquietudes, crecer como profesional y ayudar a
+          crear/mejorar aplicaciones con mi visión, ayudando a los compañeros
+          que tenga a mi lado en todo momento.
+        </p>
+      </div>
+      <div class="aboutContainer-card_image">
+        <img src="https://media.licdn.com/dms/image/D4E03AQF2R1xb6gCamA/profile-displayphoto-shrink_200_200/0/1673939612668?e=1681948800&v=beta&t=J4m5-X7M0cusH8HzlVOnonA6PJJ8_tWdhYriEf8Wamw" alt=""/>
+      </div>
+    </div>
+
+    <div class="aboutContainer-card">
+      <div class="aboutContainer-card_image">
+        <img src="https://media.licdn.com/dms/image/D4D35AQHpyoooeRVz0Q/profile-framedphoto-shrink_200_200/0/1676055319562?e=1676822400&v=beta&t=OP5xwpMUQ8yLgHKnT_7s0A2Mwwg9PDoqAMlkmVpYsd8" alt=""/>
+      </div>
+      <div class="aboutContainer-card_description">
+        <div class="aboutContainer-card_image__icons">
+          <h2 class="texI">Alejandro</h2>
+          <a href="https://github.com/alejandrolamela"><img src="../../../assets/images/github.png" alt=""/></a>
+          <a href="https://www.linkedin.com/in/alejandro-lamela-full-stack/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
+        </div>
+        <p>
+          Mi relación con las tech viene de cuando trabajé como robótico y
+          automatista , un camino duro y largo, pero que conseguí superar y
+          tambien enamorarme de esta profesión para volcarme ahora en otro
+          proyecto igual de duro pero a la par de emocionante como es ser
+          developer web.
+        </p>
+      </div>
+    </div>
+
+    <div class="aboutContainer-card">
+      <div class="aboutContainer-card_description">
+        <div class="aboutContainer-card_image__icons">
+          <h2 class="textD">Marta</h2>
+          <a href="https://github.com/martabelfon"><img src="../../../assets/images/github.png" alt=""/></a>
+          <a href="https://www.linkedin.com/in/martabeltranfonseca/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
+        </div>
+        <p class="textD">
+          Desde que tengo uso de razon, siempre he tenido curiosidad, ganas de
+          aprender nuevas tecnologías y adquirir nuevas habilidades, por ello
+          quise continuar con esta unión y empezar un bootcamp de Full Stack
+          Developer.
+        </p>
+      </div>
+      <div class="aboutContainer-card_image">
+        <img src="https://avatars.githubusercontent.com/u/117996586?v=4" alt=""/>
+      </div>
+    </div>
+  </div>
 </div>
