--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,12 +1,12 @@
 *{
     font-family: "Poppins", sans-serif;
-    color: #abd1c6;
+    color: white;
 }
 
 .homeBlock{
     display: flex;
     justify-content: center;
-    background-color: #004643;
+    background-color: rgb(90, 90, 90);;
 }
 
 .homeContainer{
@@ -20,9 +20,10 @@
 
     &-title{
 
-        background-color: green;
+        background-color:rgb(149,193,30);
         border-radius: 70px;
         padding: 10px;
+        
         
         
 
@@ -30,7 +31,7 @@
 
     &-introduction{
         width: 40%;
-        background-color: grey;
+        background-color:rgb(114, 114, 114);;
         display: flex;
         justify-content: flex-end;
         border-radius: 20px;
@@ -42,6 +43,7 @@
         p{
             width: 70%;
             padding: 10px;
+            color: #abd1c6;
         }
 
         img{
@@ -53,7 +55,7 @@
 
     &-paragraph2{
         width: 40%;
-        background-color: grey;
+        background-color:rgb(114, 114, 114);;
         display: flex;
         justify-content: flex-end;
         border-radius: 20px;
@@ -64,6 +66,7 @@
         p{
             width: 70%;
             padding: 10px;
+            color: #abd1c6;
         }
 
         img{
@@ -74,7 +77,7 @@
 
     &-paragraph{
         width: 40%;
-        background-color: grey;
+        background-color:rgb(114, 114, 114);;
         display: flex;
         justify-content: flex-end;
         border-radius: 20px;
@@ -85,6 +88,7 @@
         p{
             width: 70%;
             padding: 10px;
+            color: #abd1c6;
         }
 
         img{
