STYLE: reordering and repositioning some styles

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="aboutBlock">
   <div class="aboutContainer">
-
+    <h1 class="aboutContainer-title">SOBRE NOSOTROS</h1>
     <div class="aboutContainer-card">
       <div class="aboutContainer-card_image">
         <img src="https://media.licdn.com/dms/image/C4D03AQEk9Os_vQm5xQ/profile-displayphoto-shrink_200_200/0/1577021888394?e=1681948800&v=beta&t=48SHBsDtdtdTBxn9eH77JpuDbmY90v-Ia-ScOgRkK0s" alt=""/>
@@ -20,9 +20,9 @@
       </div>
     </div>
 
-    <div class="aboutContainer-card">
+    <div class="aboutContainer-card2">
       <div class="aboutContainer-card_description">
-        <div class="aboutContainer-card_image__icons">
+        <div class="aboutContainer-card_image__icons2">
           <h2 class="textD" >Oriol</h2>
           <a href="https://github.com/omolinsc"><img src="../../../assets/images/github.png" alt=""/></a>
           <a href="https://www.linkedin.com/in/oriolmolinscasanovas/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
@@ -60,11 +60,13 @@
       </div>
     </div>
 
-        <div class="aboutContainer-card">
-
+        <div class="aboutContainer-card2">
             <div class="aboutContainer-card_description">
-
-                <h2>Marta</h2>
+              <div class="aboutContainer-card_image__icons2">
+                <h2 class="texI">Marta</h2>
+                <a href="https://github.com/martabelfon"><img src="../../../assets/images/github.png" alt=""/></a>
+                <a href="https://www.linkedin.com/in/martabeltranfonseca/"><img src="../../../assets/images/linkedin.png" alt=""/></a>
+              </div>
                 <p>Desde que tengo uso de razon, siempre he tenido curiosidad, ganas de aprender nuevas tecnologías y
                     adquirir nuevas
                     habilidades, por ello quise continuar con esta unión y empezar un bootcamp de Full Stack Developer.
@@ -72,14 +74,8 @@
                 
             </div>
             <div class="aboutContainer-card_image">
-                <img src="https://media.licdn.com/dms/image/D4E35AQGsoo8evhKIFw/profile-framedphoto-shrink_200_200/0/1668524742739?e=1676822400&v=beta&t=XcJeapSJFLglNJHCYShzKph1fuxUoWTwGcAqakDV8QY"
+                <img src="https://avatars.githubusercontent.com/u/117996586?v=4"
                      alt="">
-                     <div class="aboutContainer-card_image__icons">
-                        <a href="https://github.com/martabelfon"><img src="../../../assets/images/github.png" alt=""
-                                ></a>
-                        <a href="https://www.linkedin.com/in/martabeltranfonseca/"><img
-                                src="../../../assets/images/linkedin.png" alt="" ></a>
-                    </div>
             </div>
         </div>
 
