--- a/src/app/pages/about-us/about-us.component.scss
+++ b/src/app/pages/about-us/about-us.component.scss
@@ -2,12 +2,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+// SCROLLBAR
 ::-webkit-scrollbar {width: 0px;}
-Track
 ::-webkit-scrollbar-track {background: #f1f1f100;}
-Handle
 ::-webkit-scrollbar-thumb {background: rgba(136, 136, 136, 0);}
-Handle on hover
 ::-webkit-scrollbar-thumb:hover {background: #95C11E;}
 
 .aboutBlock {
@@ -19,8 +17,8 @@ Handle on hover
 
 
 .aboutContainer {
-  margin-top: 10px;
-  margin-bottom: 30px;
+  padding-top: 130px;
+  max-width: 930px;
   width: 70%;
   display: flex;
   justify-content: center;
@@ -29,12 +27,26 @@ Handle on hover
   border-width: 3px;
   border-color: rgba(209, 209, 209, 0);
   border-style: solid;
-  padding: 10px;
-  background-color: rgb(114, 114, 114);;
+  padding-bottom: 80px;
+  background-color: rgb(114, 114, 114);
+  gap: 20px;
+
+  &-title {
+    margin-bottom: 30px;
+    font-size: 50px;
+    letter-spacing: 10px;
+  }
+
+  &-card2 {
+    width: 95%;
+    display: flex;
+    text-align: right;
+  }
 
   &-card {
-    width: 90%;
+    width: 95%;
     display: flex;
+    text-align: left;
 
     &_image {
       width: 30%;
@@ -47,14 +59,36 @@ Handle on hover
         border-radius: 10px;
       }
 
+      &__icons2{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        a img{
+          width: 40px;
+          text-align: center;
+          transition: all 0.3s;
+          &:hover {
+            transition: all 0.3s;
+            filter: invert(72%) sepia(54%) saturate(2103%) hue-rotate(30deg) brightness(101%) contrast(76%);
+          }
+      }
+      }
+
       &__icons{
         width: 100%;
         display: flex;
+        flex-direction: row-reverse;
         justify-content: flex-end;
 
         a img{
             width: 40px;
             text-align: center;
+            transition: all 0.3s;
+            &:hover {
+              transition: all 0.3s;
+              filter: invert(72%) sepia(54%) saturate(2103%) hue-rotate(30deg) brightness(101%) contrast(76%);
+            }
         }
       }
     }
