--- a/src/app/pages/add-documentation/add-documentation.component.html
+++ b/src/app/pages/add-documentation/add-documentation.component.html
@@ -7,22 +7,22 @@
   </select>
   <form [formGroup]="addForm" (ngSubmit)="addFormulary()" class="formulary">
     <p  class="tag">ETIQUETA</p><select name="tag" #tag formControlName="tag" class="box">
-      <option value="documentation" selected>Documentación</option>
-      <option value="videotutorial">Tutorial de Vídeo</option>
-      <option value="texttutorial">Tutorial de Texto</option>
-      <option value="resources">Recursos</option>
-      <option value="library">Librería</option>
+      <option value="Documentación" selected>Documentación</option>
+      <option value="Videotutorial">Tutorial de Vídeo</option>
+      <option value="Tutorial">Tutorial de Texto</option>
+      <option value="Recursos">Recursos</option>
+      <option value="Librería">Librería</option>
     </select>
-    <div *ngIf="tag.value !== 'videotutorial'"  class="tag-container">
+    <div *ngIf="tag.value !== 'Videotutorial'"  class="tag-container">
       <p  class="tag">IMAGEN</p><input type="text" formControlName="img"/>
     </div>
     <p  class="tag">TÍTULO</p><input type="text" formControlName="title"/>
     <p  class="tag">AUTOR</p><input type="text" formControlName="author"/>
     <p  class="tag">DESCRIPCIÓN</p><input type="text" formControlName="description"/>
-    <div *ngIf="tag.value === 'videotutorial'" class="tag-container">
+    <div *ngIf="tag.value === 'Videotutorial'" class="tag-container">
       <p  class="tag">VIDEO</p><input type="text" formControlName="video"/>
     </div>
-    <div *ngIf="tag.value !== 'videotutorial'"  class="tag-container">
+    <div *ngIf="tag.value !== 'Videotutorial'"  class="tag-container">
       <p  class="tag">URL</p><input type="text" formControlName="url"/>
     </div>
     <button data-text="Awesome" class="button">
