--- a/src/app/pages/documentation/documentation.component.scss
+++ b/src/app/pages/documentation/documentation.component.scss
@@ -1,27 +1,25 @@
-*{
-    font-family: "Poppins", sans-serif;
-}
 .container {
-    margin: 0;
     width: 100%;
     height: 100%;
-    min-height: 90vh;
+    min-height: 95vh;
     background-color: rgb(90, 90, 90);
     color: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 10px 0 100px 0;
+    padding: 100px 0 100px 0;
+    
 
     &-button{
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        gap: 20px;
-        border-bottom: 3px solid #95C11E;
-        margin-bottom: 30px;
+        justify-content: space-evenly;
+        font-size: 20px;
+        border-bottom: 3px solid #96c11e54;
+        // margin-bottom: 20px;
+        font-family: "VictorMono", sans-serif;
     }
 
     &-cards{
@@ -32,6 +30,8 @@
         flex-wrap: wrap;
         align-items: flex-start;
         gap: 20px; 
+        font-family: "Poppins", sans-serif;
+        padding-top: 20px;
     }
 }
 
@@ -45,15 +45,16 @@
     height: 400px;
     background-color: rgb(114, 114, 114);
     border-radius: 20px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     position: relative;
-    padding: 1.8rem;
+    // padding: 1.8rem;
     transition: 0.5s ease-out;
 
     &-details {
         height: 100%;
-        gap: .5em;
-        display: grid;
+        // gap: .5em;
+        // display: grid;
         place-content: center;
     }
 
@@ -63,8 +64,9 @@
     }
 
     &-img {
-        width: 300px;
-        padding: 10px 10px 0 10px;
+        width: 95%;
+        object-fit: cover;
+        border-radius: 10px;
     }
 
     &-title {
@@ -140,8 +142,8 @@ iframe {
 /* === removing default button style ===*/
 .button {
     margin: 0;
-    margin-top: 40px;
-    margin-bottom: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     height: auto;
     background: transparent;
     padding: 0;
@@ -182,3 +184,13 @@ iframe {
     width: 100%;
     filter: drop-shadow(0 0 23px var(--animation-color))
   }
+
+
+// SCROLLBAR
+::-webkit-scrollbar {width: 4px;}
+
+::-webkit-scrollbar-track {background: #f1f1f100;}
+
+::-webkit-scrollbar-thumb {background: rgba(136, 136, 136, 0);}
+
+::-webkit-scrollbar-thumb:hover {background: #95C11E;}
