--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,6 +4,8 @@
 }
 
 .homeBlock{
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     justify-content: center;
     background-color: rgb(90, 90, 90);;
