--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,6 +4,7 @@
 }
 
 .navbar{
+  width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -12,7 +13,9 @@
     align-items: center;
     border-bottom: 3px solid #95C11E;
     background-color: black;
-    // margin-bottom: 16px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 
     &-link {
     display: flex;
